# notiq

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: publish.yml
.github/workflows/: publish.yml  test.yml
src/notiq/: __init__.py  config.py
src/notiq/monitoring/: builder.py  decorators.py  loggers.py  metrics.py  validation.py
src/notiq/tasks/: jobs.py  queue.py  scheduler.py  worker.py
src/notiq/utils/: dicovery.py  exceptions.py
tests/: conftest.py
tests/integration/: test_monitoring.py
tests/unit/: conftest.py  test_loggers.py  test_monitoring.py  test_tasks.py
